<resources>
    <string name="app_name">GPS MAP CAMERA LITE</string>
    <string name="my_api_key">AIzaSyDI26S_agjdpHspadmXPFXEiu6hTsh342c</string>
    <string name="help_center">Help center</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_information">App information</string>
    <string name="share_the_app">Share the app</string>
    <string name="from">from</string>
    <string name="manabjyoti">Manabjyoti</string>
    <string name="www_speak_hear_mystrikingly_com">www.gpsmapcameralite.godaddysites.com</string>
    <string name="for_queries_contact_us_using_contact_form_on_our_website">For any queries contact us using "Contact Form" on our website:</string>
    <string name="send">Visit website</string>
    <string name="logoo">LOGO</string>
    <string name="_2022_speak_hear_mystrikingly_com">© 2023 gpsmapcameralite.godaddysites.com</string>
    <string name="Data_is_not_available_now">Data is not available now</string>
    <string name="press_the_above_button_to_trace_your_location">Press the above button to trace your location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_is_not_available_now">Data_is_not_available_now</string>
    <string name="app_logo">app_logo</string>
    <string name="rotate">Rotate</string>
    <string name="capture">Capture</string>
    <string name="preview">Preview</string>
</resources>