<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/topl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/baseline_drag_handle_24"
        android:backgroundTint="@color/md_theme_light_primary"
        android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topl1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bgreverse"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topl">


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg"
        android:padding="15dp"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topl"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/appinfo_image"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:background="@drawable/baseline_info_24"
                android:backgroundTint="@color/md_theme_light_primary"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/app_information"
                android:textSize="10sp"
                android:textColor="@color/md_theme_light_primary"></com.google.android.material.textview.MaterialTextView>


        </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/md_theme_light_primary"
        android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/appinfo_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"></TextView>

        <ImageView
            android:id="@+id/image_logo_app"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logoo"
            android:src="@drawable/icon512" />

        <TextView
            android:id="@+id/appinfo_version_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textSize="15sp"></TextView>

        <TextView
            android:id="@+id/appinfo_reserved_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_2022_speak_hear_mystrikingly_com"
            android:textSize="15sp"></TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>