<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/topl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/baseline_drag_handle_24"
            android:backgroundTint="@color/md_theme_light_primary"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/topl1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".3"
        android:background="@drawable/bgreverse"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topl">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:background="@drawable/bg"
        android:elevation="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topl"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/appinfo_image"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:background="@drawable/baseline_help_24"
                android:backgroundTint="@color/md_theme_light_primary"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/help_center"
                android:textSize="10sp"
                android:textColor="@color/md_theme_light_primary"></com.google.android.material.textview.MaterialTextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/md_theme_light_primary"
            android:orientation="horizontal"></LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c_help1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/apphelp_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/camhelp1"/>
            <TextView
                android:id="@+id/portrait_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="For portrait image"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c_help2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/apphelp_image1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/camhelp2"/>
            <TextView
                android:id="@+id/landscape_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="For landscape image"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/contact_us_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/for_queries_contact_us_using_contact_form_on_our_website"
            android:textSize="12sp"></TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bgbutton"
            android:elevation="8dp"
            android:padding="15dp"
            android:text="@string/send"
            android:textSize="15sp"></androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/contact_us_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/www_speak_hear_mystrikingly_com"
            android:textSize="10sp"></TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>