<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <include layout="@layout/toolbar_layout" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_button"
            android:layout_below="@+id/tool">


            <androidx.camera.view.PreviewView
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:scaleType="fillCenter"
                android:layout_alignParentTop="true"
                android:background="@drawable/transparent_background" />

            <ImageView
                android:id="@+id/flashlight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="11dp"
                android:src="@drawable/baseline_flash_off_24"
                android:layout_alignParentEnd="true"
                android:layout_above="@id/linear_top"
                app:tint="@color/md_theme_light_primary" />

            <LinearLayout
                android:id="@+id/linear_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="2dp"
                android:orientation="vertical"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingEnd="3dp"
                    android:background="@drawable/transparent_background"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:background="@drawable/icon512"
                        android:contentDescription="@string/app_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.fragment.app.FragmentContainerView
                            android:id="@+id/map"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_margin="2dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/gmaps"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_margin="2dp"
                            android:background="@drawable/transparent_background"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <LinearLayout
                        android:id="@+id/linear1"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/transparent_background"
                        android:orientation="vertical"
                        android:padding="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/address_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text=" "
                                android:textColor="@color/white"
                                android:textSize="10sp"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/latitude_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text=" "
                                android:textColor="@color/white"
                                android:textSize="10sp"></TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/longitude_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text=" "
                                android:textColor="@color/white"
                                android:textSize="10sp"></TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <TextView
                                android:id="@+id/time_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="2dp"
                                android:text=" "
                                android:textColor="@color/white"
                                android:textSize="10sp"></TextView>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/thumbnailviewcontainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/square_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/thumbnailview"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_margin="5dp"
                    android:background="@color/black" />
            </LinearLayout>
            <TextView
                android:id="@+id/hintPreview"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                android:layout_marginTop="1dp"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="8sp"
                tools:ignore="SmallSp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thumbnailviewcontainer"/>

            <LinearLayout
                android:id="@+id/capture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/square_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rotate_button"
                app:layout_constraintStart_toEndOf="@+id/thumbnailviewcontainer"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView

                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@color/md_theme_light_primary" />
            </LinearLayout>
            <TextView
                android:id="@+id/hintCapture"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/capture"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="8sp"
                tools:ignore="SmallSp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hintPreview"
                app:layout_constraintEnd_toStartOf="@+id/hintRotate"
                app:layout_constraintTop_toBottomOf="@+id/capture_button"/>

            <Button
                android:id="@+id/rotate_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/baseline_flip_camera_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/hintRotate"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/rotate"
                android:textColor="@color/white"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rotate_button"
                tools:ignore="SmallSp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>